# KUPAssignment

./: README.md
Assignment1/: Cargo.toml
Assignment2/: Cargo.toml
Assignment2/src/: fibonacci.rs  hello.rs  main.rs
Assignment3/: Cargo.toml
Assignment3/src/: leap_year.rs  main.rs  searching.rs  sorting.rs
Assignments/assignment10/: Cargo.toml
Assignments/assignment10/src/: creating_duplicate.rs  deleting_duplicate.rs  first_even.rs  lib.rs  palindrome_check.rs  removing_nth_element.rs  reverse_list.rs  sum_conditional_operation.rs  test.rs
Assignments/assignment11/: Cargo.toml
Assignments/assignment11/src/: lib.rs  test.rs
Assignments/assignment12/: Cargo.toml
Assignments/assignment12/src/: async_data.rs  lib.rs  main.rs  printing_table.rs  test.rs
Assignments/assignment13/: Cargo.toml
Assignments/assignment13/src/: lib.rs  library_menu.rs  test.rs
Assignments/assignment6/src/: ip_configuration.rs  lib.rs  quadrant.rs  test.rs
Assignments/assignment7/: Cargo.toml
Assignments/assignment7/src/: lib.rs  pattern_searching.rs  string_operation.rs  substring_generation.rs  test.rs
Assignments/assignment8/: Cargo.toml
Assignments/assignment8/src/: even_odd.rs  lib.rs  test.rs
Assignments/assignment9/: Cargo.toml
Assignments/assignment9/src/: array_sorting.rs  geometric_series.rs  lib.rs  (+2 more)
assignment3/src/: main.rs  searching.rs
assignment4/: Cargo.toml
assignment4/src/: hello_count.rs  lib.rs  main.rs  palindrom.rs  pelindrom.rs  rotation.rs  test.rs
assignment6/: Cargo.toml
assignment6/src/: ip_configuration.rs  lib.rs  quadrant.rs
(+17 files in other folders)
