[package]
name = "Assignment4"
version = "0.1.0"
authors = ["Dheerajknoldus <dheeraj.mishra@knoldus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-tarpaulin = "0.16.0"
openssl = { version = "0.10", features = ["vendored"] }